test/org/midica/testfiles/failing/instruments-with-param.midica
INSTRUMENTS param
	0 0 test1
	1 0 test2
END
